--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,29 @@
+aiohttp==3.8.4
+aiosignal==1.3.1
 alembic==1.10.3
 anyio==3.6.2
+async-timeout==4.0.2
 asyncpg==0.27.0
+attrs==22.2.0
+bcrypt==4.0.1
+cffi==1.15.1
+charset-normalizer==3.1.0
 click==8.1.3
+cryptography==3.4.8
 dnspython==2.3.0
 email-validator==1.3.1
 fastapi==0.95.0
 fastapi-jwt-auth==0.5.0
+frozenlist==1.3.3
 greenlet==2.0.2
 h11==0.14.0
 idna==3.4
 Mako==1.2.4
 MarkupSafe==2.1.2
+multidict==6.0.4
 passlib==1.7.4
 psycopg2-binary==2.9.6
+pycparser==2.21
 pydantic==1.10.7
 PyJWT==1.7.1
 python-dotenv==1.0.0
@@ -21,3 +32,4 @@ SQLAlchemy==1.4.29
 starlette==0.26.1
 typing_extensions==4.5.0
 uvicorn==0.21.1
+yarl==1.8.2
